# LAPR3

./: .gitignore  LAPR3-2022-Self-Assessment_v2.0.xlsx  instrucoes_de_rega.txt  plano_de_rega.csv  pom.xml
docs/: Legacy_Data_v0.xlsx  Legacy_Data_v2.xlsx  glossary.md  notas.txt  questoes-cliente.txt  questoes-forum.txt
docs/esinf_data/: Hubs  distancias_smallv1.csv  locais_smallv1.csv
docs/relational-model/: ip-bddad-v01.vpp  ip-bddad-v03 - Cópia.vpp  ip-bddad-v04.vpp
docs/sprint1/: Client Clarification.md
docs/sprint2/: Client Clarification.md
docs/sprint2/bddad/: Dados_Sprint_2_v2.txt  Dados_Sprint_2_v3.txt  Dados_Sprint_Review_2_v0.txt  registrar-operaçoes-funçoes-comuns.sql
docs/sprint3/arqcp/Processador de dados/: CMakeLists.txt
docs/sprint3/arqcp/Processador de dados v2/: CMakeLists.txt  config.txt
docs/sprint3/arqcp/Processador de dados v2/dados_sensores/: sensores.txt
docs/sprint3/arqcp/Processador de dados v2/processador de dados/: allocMemSens.c  allocateMem.c  c.h  calculateMedian.c  compareFloat.c  freeSens.c  insertConfigData.c  main.c  populateSameSensor.c  readConfig.c  writeOut.c  writeOutError.c
docs/sprint3/arqcp/Processador de dados/dados_sensores/: sensores.txt
docs/sprint3/arqcp/Processador de dados/processador de dados/: allocateMem.c  c.h  checkAndCreateDirectory.c  freeMem.c  getNumSensorsFromConfig.c  insertConfigData.c  main.c  populateSameSensor.c  readConfig.c  readLine.c
docs/sprint3/outros/: notas.txt  questoes-cliente.txt
docs/sprint3/template/: US XXXX.md
src/resources/: application.properties
(+597 files in other folders)
